--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "json-server-deploy",
+  "name": "resto-db",
   "version": "1.0.0",
   "description": "Simple json database to deploy to the host of your choice",
   "main": "server.js",
@@ -9,7 +9,7 @@
   "keywords": [
     "json-server,heroku, node, REST API"
   ],
-  "author": "Jesper Orb",
+  "author": "Anton Shumeiko",
   "license": "ISC",
   "dependencies": {
     "json-server": "^0.16.2"
